--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,9 +10,15 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'dracula/tmux'
 
 set-option -g status-position top
+set-option -g default-shell /bin/zsh
 
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
+
+# Automatic rename of window to current path
+set-option -g status-interval 5
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 # Scroll your way into copy mode (scrollback buffer)
 # and select text for copying with the mouse
