--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,10 @@ set-option -g automatic-rename-format '#{b:pane_current_path}'
 # and select text for copying with the mouse
 set -g mouse on
 
+# neovim recommendations
+set-option -sg escape-time 10
+set-option -g focus-events on
+
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
